--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -16,9 +16,9 @@ During some recent pentests I have been wanting to impersonate 'Domain Admins' a
 
 It has modules for returning the users and groups, but not for informing us of what users belong to what groups. This is where the idea for the module named GROUP-MEM came about which is just shorthand for 'group membership'.
 
-The thinking around my second module was that at times I like to be able to figure out what are the names and IPs of the servers in the domain. Sometimes we aren't interested in seeing a list of tens of Windows 10 workstations that CME may return, but just a limited subset for us to plan our attack around.
+The thinking around my second module was that at times I like to be able to figure out what are the names and IPs of the servers in the domain. Sometimes we aren't interested in seeing a list of tens of Windows 10 workstations that CME may return, but just a limited subset for us to plan our attack around such has servers or DCs.
 
-This is where the idea for the second module named COMP-DESC ('computer description') originated. It uses LDAP to look up all the computer objects with the 'operating system' description matching the string you provide it and returns the list of computers and their IPs. One thing to note is that if there are computer accounts in LDAP that are only objects and not 'live', no IP will be returned, so it isn't scanning the network but looking up objects.
+This is where the idea for the second module named FIND-COMPUTER originated. It uses LDAP to look up all the computer objects with the 'operating system' description or name matching the string you provide it and returns the list of computers and their IPs. One thing to note is that if there are computer accounts in LDAP that are only objects and not 'live', no IP will be returned, so it isn't scanning the network but looking up objects.
 
 Finally I really like the addcomputer.py script from impacket so I wanted to port that over to CME which became my ADD-COMPUTER module.
 
@@ -29,7 +29,7 @@ Update: Now just checkout the latest CME code so no need to manually install the
 They can be downloaded [here](https://github.com/Cyb3rC3lt/CrackMapExec-Modules).
 Then place them here: ~/.cme/modules
 
-### GROUP-MEM, COMP-DESC and ADD-COMPUTER Modules
+### GROUP-MEM, FIND-COMPUTER and ADD-COMPUTER Modules
 
 To run them is very easy:
 
@@ -45,10 +45,10 @@ crackmapexec ldap $DC_IP -u Username -p Password -M GROUP-MEM -o GROUP="domain a
 crackmapexec ldap $DC_IP -u Username -p Password -M GROUP-MEM -o GROUP="domain controllers"
 {% endhighlight %}
 
-**COMP-DESC Module: Returning Computers with 'server' in their description**
+**FIND-COMPUTER Module: Returning Computers with 'server' in their description or name**
 
 {% highlight powershell %}
-crackmapexec ldap $DC_IP -u Username -p Password -M COMP-DESC -o DESC="server"
+crackmapexec ldap $DC_IP -u Username -p Password -M FIND-COMPUTER -o TEXT="server"
 {% endhighlight %}
 
 **ADD-COMPUTER Module: Adding a new computer**
@@ -80,7 +80,7 @@ crackmapexec smb $DC_IP -u Username -p Password -M ADD-COMPUTER -o NAME="BADPC10
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/GROUP-MEM-OPTIONS.jpg" width="200"/>
 
-<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="200"/>
+<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/FIND-OPTIONS.jpg" width="200"/>
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-OPTIONS.jpg" width="200"/>
 
@@ -104,22 +104,25 @@ Here you can also easily verify if any **RBCD** machines such as the EVILPC show
 <img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/DCDA.jpg"/>
 
 
-### COMP-DESC Results
+### FIND-COMPUTER Results
 
-Here are some examples of the output from the COMP-DESC module shown below:
+Here are some examples of the output from the FIND-COMPUTER module shown below:
 
-<ins>**Returning Servers matching the supplied description**</ins>
+<ins>**Returning Servers matching the supplied text**</ins>
 
-This example displays 2 scenarios, returning a 'Computer' object described with the word 'server' and also with the text '10'.
-If the IP can be retrieved it will also do so.
+This example returns computers with 'server' in their name or operating system
 
-<img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC.jpg"/>
+<img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/FIND-SERVER.jpg"/>
+
+<ins>**Returning computers with 'DC' in their name or operating system**</ins>
+
+<img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/FIND-DC.jpg"/>
 
 <ins>**Returning a failed server lookup which illustrates its error handling**</ins>
 
-This example shows a scenario of a 'Computer' object described with the word 'z' which is unable to be found.
+This example shows a scenario of a 'Computer' object described with the text 'z' which is unable to be found.
 
-<img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-FAIL.jpg"/>
+<img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/FIND-ERROR.jpg"/>
 
 ### ADD-COMPUTER Results
 
