--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -128,7 +128,7 @@ This example shows a scenario of a 'Computer' object described with the text 'z'
 
 Here are some examples of the output from the ADD-COMPUTER module shown below:
 
-**Adding a Computer with credentials, hashes or using Kerberos**
+<ins>**Adding a Computer with credentials, hashes or using Kerberos**</ins>
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-MACHINE.jpg"/>
 
@@ -136,7 +136,7 @@ Here are some examples of the output from the ADD-COMPUTER module shown below:
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-MACHINE-KERB.jpg"/>
 
-**Changing a Computer password**
+<ins>**Changing a Computer password**</ins>
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-CHANGEPW.jpg"/>
 
@@ -144,7 +144,7 @@ Here are some examples of the output from the ADD-COMPUTER module shown below:
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-DELETE.jpg"/>
 
-**Error handling if a Computer already exists with that name**
+<ins>**Error handling if a Computer already exists with that name**</ins>
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-EXISTS.jpg"/>
 
