--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -140,7 +140,7 @@ Here are some examples of the output from the ADD-COMPUTER module shown below:
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-CHANGEPW.jpg"/>
 
-**Deleting a Computer**
+<ins>**Deleting a Computer**</ins>
 
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/ADD-DELETE.jpg"/>
 
