--- a/_posts/2024-12-15-bsides2024.md
+++ b/_posts/2024-12-15-bsides2024.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "BSides London 2024"
+title: "Presenting at BSides London 2024"
 permalink: "bsides2024"
 date: 15-12-2024
 categories: Blog
@@ -8,9 +8,11 @@ categories: Blog
 
 I had a fantastic time presenting the opening talk on the main stage at BSides London 2024 yesterday. I got a chance to explain some interesting new attack vectors using trusted binaries such as ssh, sshd and cloudflared. 
 
-I will place the slides here for now and I will post the video when it comes out next year including a detailed blog post on this topic.
+I will place the slides and video here for now and I will post a detailed blog post on this topic in the new year.
 
 [Bring Your Own Trusted Binary Slides](/assets/files/BSides-BringYourOwnTrustedBinary(BYOTB).pdf)
+
+[Bring Your Own Trusted Binary Video](https://youtu.be/LexDzVG_Xu0?si=B_nHg7_OYLDLi6KG)
 
 <img src="/assets/img/BSides1.jpg" width="200"/>
 
